breakpoint and visibilites fixes

--- a/public/src/scss/framework/_breakpoints.scss
+++ b/public/src/scss/framework/_breakpoints.scss
@@ -1,7 +1,7 @@
 $xsmall-up: 'only screen';
 $xsmall-only: 'only screen and (max-width: 25em)';
 $small-up: 'only screen and (min-width: 25.063em)';
-$small-only: 'only screen and (min-width: 30.063em) and (max-width: 40em)';
+$small-only: 'only screen and (min-width: 25.063em) and (max-width: 40em)';
 $medium-up: 'only screen and (min-width: 40.063em)';
 $medium-only: 'only screen and (min-width: 40.063em) and (max-width: 64em)';
 $large-up: 'only screen and (min-width: 64.063em)';
